create docs for request reset password email
