# docs/swagger.json
@@ -510,7 +510,7 @@
         ],
         "summary": "Register user",
         "operationId": "registerUser",
-        "description": "Register user with email and password",
+        "description": "Register user with name, email and password",
         "security": [],
         "requestBody": {
           "content": {
@@ -518,10 +518,16 @@
               "schema": {
                 "type": "object",
                 "required": [
+                  "name",
                   "email",
                   "password"
                 ],
                 "properties": {
+                  "name": {
+                    "description": "User's name",
+                    "type": "string",
+                    "example": "Olga"
+                  },
                   "email": {
                     "description": "User's email",
                     "type": "string",
@@ -569,6 +575,260 @@
           },
           "409": {
             "$ref": "#/components/responses/409"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/auth/login": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "Login user",
+        "operationId": "loginUser",
+        "description": "Login user with email and password",
+        "security": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "email",
+                  "password"
+                ],
+                "properties": {
+                  "email": {
+                    "description": "User's email",
+                    "type": "string",
+                    "example": "example@gmail.com"
+                  },
+                  "password": {
+                    "description": "User's password",
+                    "type": "string",
+                    "example": "anfjv74"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "logins user",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully logged in the user!"
+                    },
+                    "data": {
+                      "type": "object",
+                      "required": [
+                        "accessToken"
+                      ],
+                      "properties": {
+                        "accessToken": {
+                          "type": "string",
+                          "example": "lVA0IQW4/fWvdxKhAPpAOKISjR2ep2yrjqaYAHf+"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/auth/refresh": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "Refresh user session",
+        "operationId": "refreshUserSession",
+        "description": "Refresh the user's session using the provided refresh token stored in cookies",
+        "security": [],
+        "parameters": [
+          {
+            "in": "cookie",
+            "name": "userId",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "The ID of the user.",
+            "example": "60c72b2f9b1d8e2f88e33e2a"
+          },
+          {
+            "in": "cookie",
+            "name": "refreshToken",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "The refresh token for the user session.",
+            "example": "dXNlcjoxMjM0NTY3ODkwOnJlZnJlc2gtdG9rZW4tZXhhbXBsZQ=="
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "session refreshed",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully refreshed the session"
+                    },
+                    "data": {
+                      "type": "object",
+                      "required": [
+                        "accessToken"
+                      ],
+                      "properties": {
+                        "accessToken": {
+                          "type": "string",
+                          "example": "lVA0IQW4/fWvdxKhAPpAOKISjR2ep2yrjqaYAHf+"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/auth/logout": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "Logout user",
+        "operationId": "logoutUser",
+        "description": "makes user log out using cookie userId",
+        "security": [],
+        "parameters": [
+          {
+            "in": "cookie",
+            "name": "userId",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "60c72b2f9b1d8e2f88e33e2a"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "User logged out. No content"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/auth/send-reset-email": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "Send reset email",
+        "operationId": "sendResetEmail",
+        "description": "Request reset password. User provides their email address and SMTP server sends them an email with the link that contains reset password token",
+        "security": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "email"
+                ],
+                "properties": {
+                  "email": {
+                    "description": "User's email",
+                    "type": "string",
+                    "example": "example@gmail.com"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "reset password email sent",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Reset password email has been successfully sent."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "$ref": "#/components/responses/404"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
           }
         }
       }
@@ -687,6 +947,10 @@
                 "data": {
                   "type": "string",
                   "example": "Bad Request"
+                },
+                "errors": {
+                  "type": "string",
+                  "example": "Username is required"
                 }
               }
             }
@@ -710,7 +974,7 @@
                 },
                 "data": {
                   "type": "string",
-                  "example": "Access token expired"
+                  "example": "Unauthorized"
                 }
               }
             }
@@ -757,16 +1021,8 @@
                   "example": 409
                 },
                 "data": {
-                  "type": "object",
-                  "required": [
-                    "message"
-                  ],
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "Email in use"
-                    }
-                  }
+                  "type": "string",
+                  "example": "Email in use"
                 }
               }
             }
